Updated README Added Quorridor directions Minor code clean-up edits